# clear-modbus

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  main.py  noxfile.py  pyproject.toml  todo.txt
.github/workflows/: benchmarks.yml  build-package.yml  ci.yml  release.yml
benchmarks/: datastore.py  protocol.py  server.py
doc/: api.rst  conf.py  datastore.rst  errors.rst  getting-started.rst  index.rst  protocol.rst  release-notes.rst  releasing.rst  server.rst  simulator.rst
doc/clients/: index.rst  rtu.rst  tcp.rst
newsfragments/: +12503975.feature.rst  +benchmarks.misc.md  +ci-towncrier-check.misc.md  +datastore-index.misc.md  +performance.misc.md  +release-workflows.misc.md  1.doc.md  18.feature.md  19.feature.md  2.misc.md  3.misc.md  4.feature.md  README.md  read-write-multiple-registers.feature.md
scripts/: extract_release_notes.py  smoke_wheel.py
src/clear_modbus/: __init__.py  client.py  client_helpers.py  exceptions.py  rtu_client.py  server.py  simulator.py
src/clear_modbus/datastore/: __init__.py  blocks.py  errors.py  memory.py
src/clear_modbus/protocol/: codec.py  functions.py  mbap.py  pdu.py  registry.py  rtu.py
src/clear_modbus/transport/: __init__.py  base.py  serial.py  tcp.py
src/modbus/: __init__.py  client.py  client_helpers.py  constants.py  exceptions.py  rtu_client.py  server.py  simulator.py
src/modbus/datastore/: __init__.py  base.py  blocks.py  errors.py  memory.py
src/modbus/protocol/: codec.py  functions.py  mbap.py  pdu.py  rtu.py
src/modbus/transport/: __init__.py  base.py  serial.py  tcp.py
tests/: conftest.py  test_client.py  test_exceptions.py  test_registry.py  test_rtu_client.py  test_server.py  test_simulator.py
tests/datastore/: test_blocks.py  test_errors.py  test_memory.py
tests/protocol/: test_codec.py  test_functions.py  test_mbap.py  test_pdu.py  test_rtu.py
tests/transport/: test_serial.py  test_tcp.py
