[project]
name = "clear-modbus"
version = "0.1.1"
description = "Async Python Modbus TCP and RTU client/server toolkit with simulator support."
readme = "README.md"
requires-python = ">=3.12"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [
    { name = "Eric Coughlin", email = "eric@coughlin.software" },
]
maintainers = [
    { name = "Eric Coughlin", email = "eric@coughlin.software" },
]
keywords = [
    "asyncio",
    "fieldbus",
    "modbus",
    "modbus-rtu",
    "modbus-tcp",
    "simulator",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Communications",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pyserial>=3.5",
]

[project.urls]
Homepage = "https://github.com/couger01/clear-modbus"
Repository = "https://github.com/couger01/clear-modbus"
Issues = "https://github.com/couger01/clear-modbus/issues"
Changelog = "https://github.com/couger01/clear-modbus/releases"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "myst-parser>=5.1.0",
    "pre-commit>=4.0.0",
    "pydoclint>=0.8.6",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.11.0",
    "sphinx>=9.1.0",
    "sphinx-automodapi>=0.22.0",
    "towncrier>=25.8.0",
    "ty>=0.0.1a1",
]

[tool.towncrier]
package = "clear_modbus"
package_dir = "src"
filename = "CHANGELOG.md"
directory = "newsfragments"
start_string = "<!-- towncrier release notes start -->\n"
title_format = "## {version} ({project_date})"
issue_format = "[#{issue}](https://github.com/couger01/clear-modbus/issues/{issue})"

[[tool.towncrier.type]]
directory = "feature"
name = "Features"
showcontent = true

[[tool.towncrier.type]]
directory = "bugfix"
name = "Bug Fixes"
showcontent = true

[[tool.towncrier.type]]
directory = "doc"
name = "Documentation"
showcontent = true

[[tool.towncrier.type]]
directory = "removal"
name = "Removals"
showcontent = true

[[tool.towncrier.type]]
directory = "misc"
name = "Miscellaneous"
showcontent = true

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "D", "DOC"]
ignore = ["E501", "D107"]
preview = true

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D", "DOC"]

[tool.ty]
environment.python-version = "3.12"
